--- a/CHIPSApp/res/layout/application_hub.xml
+++ b/CHIPSApp/res/layout/application_hub.xml
@@ -6,9 +6,9 @@
   android:layout_height="match_parent">
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:id="@+id/applicationHubTopBarGroup">
         <ImageButton android:src="@drawable/settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/applicationHubSettingsButton" android:background="@android:color/transparent" android:onClick="preferencesClicked"/>
-        <ImageButton android:src="@drawable/logout" android:id="@+id/applicationHubLogout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="@android:color/transparent" android:onClick="logoutClicked"></ImageButton>
+        <ImageButton android:src="@drawable/logout" android:id="@+id/applicationHubLogout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="@android:color/transparent" android:onClick="logoutClicked" android:paddingLeft="5dp"></ImageButton>
         <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/applicationHubTopBarPadding" android:background="@android:color/transparent"/>
-        <ImageButton android:src="@drawable/plus" android:id="@+id/applicationHubCreateMealsButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="@android:color/transparent" android:onClick="addFavoriteClicked"></ImageButton>
+        <ImageButton android:id="@+id/applicationHubCreateMealsButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:background="@android:color/transparent" android:onClick="addFavoriteClicked" android:src="@drawable/favorite"></ImageButton>
         
     </LinearLayout>
     <com.chips.widget.ScrollViewGallery
