--- a/CHIPSApp/res/layout/preferences.xml
+++ b/CHIPSApp/res/layout/preferences.xml
@@ -18,13 +18,13 @@
         </LinearLayout>
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pickerGroup">
             <com.customwidget.numberpicker.NumberPicker android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/heightPicker"></com.customwidget.numberpicker.NumberPicker>
-            <com.customwidget.numberpicker.NumberPicker android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/numberPicker1"></com.customwidget.numberpicker.NumberPicker>
+            <com.customwidget.numberpicker.NumberPicker android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weightPicker"></com.customwidget.numberpicker.NumberPicker>
         </LinearLayout>
 	
 	</LinearLayout>
 	</ScrollView>
     <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/padLayout" android:layout_weight="1"></LinearLayout>
     <LinearLayout android:id="@+id/preferencesBottomButtonGroup" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:layout_weight="1" android:gravity="bottom">
-        <ImageButton android:background="@android:color/transparent" android:id="@+id/saveButton" android:src="@drawable/save_button" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageButton>
+        <ImageButton android:background="@android:color/transparent" android:id="@+id/saveButton" android:src="@drawable/save_button" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:onClick="saveStatisticsClicked"></ImageButton>
     </LinearLayout>
 </LinearLayout>
