--- a/CHIPSApp/res/layout/meal_group.xml
+++ b/CHIPSApp/res/layout/meal_group.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout android:id="@+id/LinearLayout1"
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" android:minHeight="32dp">
-    <TextView android:text="TextView" android:id="@+id/groupName" android:layout_width="match_parent" android:textSize="15dp" android:textStyle="bold" android:layout_height="wrap_content"></TextView>
-    <TextView android:layout_height="wrap_content" android:text="TextView" android:id="@+id/groupQuantity" android:gravity="right" android:layout_width="match_parent"></TextView>
-</LinearLayout>
+    <TextView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:text="TextView" android:id="@+id/groupName" android:layout_width="match_parent" android:textSize="15dp" android:textStyle="bold" android:layout_height="wrap_content"></TextView>
+
+</RelativeLayout>
