--- a/CHIPSApp/res/layout/meal_view_item.xml
+++ b/CHIPSApp/res/layout/meal_view_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout android:id="@+id/LinearLayout1"
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent" android:orientation="vertical">
-    <TextView android:id="@+id/mealIngredientName" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:textSize="14dp"></TextView>
-    <TextView android:id="@+id/mealIngredientQuantity" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:layout_gravity="right" android:textStyle="bold" android:textSize="11dp"></TextView>
+    <TextView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:id="@+id/mealIngredientName" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:textSize="14dp"></TextView>
+    <TextView android:layout_alignParentRight="true" android:layout_alignBottom="@+id/mealIngredientName" android:id="@+id/mealIngredientQuantity" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:layout_gravity="right" android:textStyle="bold" android:textSize="11dp"></TextView>
     
-</LinearLayout>
+</RelativeLayout>
