--- a/CHIPSApp/res/layout/favorites.xml
+++ b/CHIPSApp/res/layout/favorites.xml
@@ -36,7 +36,7 @@
         android:id="@+id/favoriteMealsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" >
+        android:layout_weight="1" android:paddingTop="5dp">
     </ExpandableListView>
 
         
