--- a/CHIPSApp/res/layout/login.xml
+++ b/CHIPSApp/res/layout/login.xml
@@ -6,7 +6,7 @@
   android:fillViewport="true">
   <RelativeLayout 
   		android:layout_width="fill_parent"
-  		android:layout_height="wrap_content" android:background="#000000">
+  		android:layout_height="wrap_content">
   		
   		<!--  Header  Starts-->
   		<LinearLayout android:id="@+id/header"
