--- a/CHIPSApp/res/values/styles.xml
+++ b/CHIPSApp/res/values/styles.xml
@@ -2,5 +2,6 @@
 <resources>
     <style name="ChipsStyle" parent="@android:style/Theme.NoTitleBar">
         <item name="android:windowBackground">@drawable/background</item>
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
