--- a/CHIPSApp/res/values/styles.xml
+++ b/CHIPSApp/res/values/styles.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="ChipsStyle" parent="@android:style/Theme.NoTitleBar">
         <item name="android:windowBackground">@drawable/background</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 </resources>
